website/deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snack
spec:
  minReadySeconds: 10
  progressDeadlineSeconds: 300
  revisionHistoryLimit: 10
  strategy:
    type: "RollingUpdate"
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 5
  template:
    spec:
      restartPolicy: Always
      containers:
        - name: snack
          image: us-central1-docker.pkg.dev/exponentjs/snack/snack:SetBySkaffold
          ports:
          - containerPort: 3011
            name: http
          readinessProbe:
            httpGet:
              path: "/ready"
              port: 3011
            initialDelaySeconds: 1
          resources:
            limits:
              memory: 182Mi
            requests:
              cpu: 40m
              memory: 182Mi
